# StreamLEC

./: CMakeLists.txt  README.md
apps/kmeans/: parameters.hpp  processor  processor.hpp  processor_interface.hpp  sink  sink.cpp  sink_interface.hpp  source
apps/linear_regression/: Makefile  processor  processor.hpp  processor_interface.hpp  sink  sink_interface.hpp  source.cpp
apps/logistic_regression/: processor.cpp  processor_interface.hpp  sample.ini  sink_interface.hpp  source_interface.hpp
apps/logistic_regression_prediction/: .processor_interface.hpp.swp  .sample.ini.swp  processor_interface.hpp  sink_interface.hpp
apps/neural_network/: data_type.hpp  decode.hpp  neural_util.hpp  processor  processor_interface.hpp  sink  sink_interface.hpp
apps/support_vector_machine/: data_type.hpp  encode.hpp  processor  processor_interface.hpp  sink  sink_interface.hpp
apps/trace/: sample.txt
include/: streamlec.h
programming/: Makefile  processor.hpp  sink_interface.hpp
script/: run.sh  run_all.sh  setup.sh  stop.sh  stop_all.sh
src/: config.hpp  params.hpp  raw_item_d.hpp  wrap_item.hpp
src/coding/: Decoder.cpp  Encoder.cpp  Processor.cpp  Processor.hpp  coding_item.hpp  decode_default.hpp  decode_interface.hpp  encode_default.hpp  encode_interface.hpp  matrix_operation.hpp  matrix_reverse.hpp  processor_interface.hpp  sample.ini
src/control_channel/: command.hpp
src/controller/: zk_controller_client.hpp
src/net/: clock.hpp  encoder.hpp  epoll.hpp  i_engine.hpp  i_poll_events.hpp  io_object.cpp  io_object.hpp  stream_engine.cpp  stream_engine.hpp  stream_engine_orig.cpp  stream_engine_orig.hpp  tcp_connecter.cpp  tcp_connecter.hpp  tcp_listener.cpp  tcp_listener.hpp  v2_decoder.cpp
src/queues/: mpsc_object_indirect_mesh.hpp  mpsc_queue_mesh_zerocopy.hpp  mpsc_reader_indirect_mesh.hpp  mpsc_writer_indirect_mesh.hpp  zerocopy_ringbuffer.hpp
src/thread/: adapter_ram_d.hpp  compute_thread.hpp  down_thread_net.hpp  in_callback_simple.hpp  main_thread.hpp  out_callback_simple.hpp  tags  thread.cpp  thread.hpp  up_thread.hpp  up_thread_net.hpp  up_thread_trace.hpp  up_thread_trace_afs.hpp  worker.hpp
